uneeded pages deleted, task 1 updated
task 1 is missing some things to function but is closer to full functionality

--- a/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_Page1.html
+++ b/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_Page1.html
@@ -290,13 +290,14 @@ Page attributes:
 
 
 <!-- Variable storage here -->
-<input type="hidden" name="Var6" id="NoQuestionsChoice"/>
-<input type="hidden" name="Var0" id="BallRedYes_Val"/>
-<input type="hidden" name="Var1" id="BallRedNo_Val"/>
-<input type="hidden" name="Var2" id="BallYellowYes_Val"/>
-<input type="hidden" name="Var3" id="BallYellowNo_Val"/>
-<input type="hidden" name="Var4" id="BallGreenYes_Val"/>
-<input type="hidden" name="Var5" id="BallGreenNo_Val"/>
+<input type="hidden" name="Choice_NoQ" id="NoQuestionsChoice"/>
+<input type="hidden" name="Choice_RedYes" id="BallRedYes_Val"/>
+<input type="hidden" name="Choice_RedNo" id="BallRedNo_Val"/>
+<input type="hidden" name="Choice_YellowYes" id="BallYellowYes_Val"/>
+<input type="hidden" name="Choice_YellowNo" id="BallYellowNo_Val"/>
+<input type="hidden" name="Choice_GreenYes" id="BallGreenYes_Val"/>
+<input type="hidden" name="Choice_GreenNo" id="BallGreenNo_Val"/>
+
 {% next_button %}
 {% endblock %}
 
