--- a/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_PageRED.html
+++ b/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_PageRED.html
@@ -108,9 +108,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q0_0" name="q0" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q0_1" name="q0" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -176,9 +176,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q2_0" name="q2" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q2_1" name="q2" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -212,9 +212,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q3_0" name="q3" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q3_1" name="q3" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -248,9 +248,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q4_0" name="q4" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q4_1" name="q4" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -283,9 +283,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q5_0" name="q5" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q5_1" name="q5" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -315,9 +315,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q6_0" name="q6" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q6_1" name="q6" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -350,9 +350,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q7_0" name="q7" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q7_1" name="q7" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -383,9 +383,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q8_0" name="q8" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q8_1" name="q8" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -418,9 +418,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q9_0" name="q9" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q9_1" name="q9" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -451,9 +451,9 @@ Page attributes:
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				<input type="radio" id = "Q10_0" name="q10" value="0" > 
 				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+ 				<input type="radio" id = "Q10_1" name="q10" value="1"> 
 			</form>
 			</div>
 		</div>
@@ -476,6 +476,17 @@ Page attributes:
 
 
 <!-- Variable storage here -->
+<input type="hidden" name="Red_Q0" id="Q0"/>
+<input type="hidden" name="Red_Q1" id="Q1"/>
+<input type="hidden" name="Red_Q2" id="Q2"/>
+<input type="hidden" name="Red_Q3" id="Q3"/>
+<input type="hidden" name="Red_Q4" id="Q4"/>
+<input type="hidden" name="Red_Q5" id="Q5"/>
+<input type="hidden" name="Red_Q6" id="Q6"/>
+<input type="hidden" name="Red_Q7" id="Q7"/>
+<input type="hidden" name="Red_Q8" id="Q8"/>
+<input type="hidden" name="Red_Q9" id="Q9"/>
+<input type="hidden" name="Red_Q10" id="Q10"/>
 
 {% next_button %}
 {% endblock %}
@@ -492,92 +503,177 @@ Page attributes:
 
 {% block scripts %}
 	<script>
-	var BRY = document.getElementById("BallRedYes_Val");
-	var BRN = document.getElementById("BallRedNo_Val");
-	var BYY = document.getElementById("BallYellowYes_Val");
-	var BYN = document.getElementById("BallYellowNo_Val");
-	var BGY = document.getElementById("BallGreenYes_Val");
-	var BGN = document.getElementById("BallGreenNo_Val");
+	/* Variable name explanation
+	-In the hidden variable storage in the html, the name is the python variable name
+	-id above is some arbitrary name we attach
+	-In the script box here, we name our variable something and grab the ID
+		for example, var q0 = document.getElementById("Q0"), we've named q0, but
+		the ID grabbed is from the id="Q0" in the html.
+	-in the function, input[name="q0"], the name= is the name from the radio
+		button input. Note that these inputs for the 0 and 1 values have
+		the same name.
+	-within the function, we have a Q0_0 and Q1_0, for example. These are
+		the individual radio buttons we click.
 	
-	$('input[name="ball_red_yes"]').on("click", function(e) {
-		console.log("Red Ball 'YES' option clicked");
-		if (document.getElementById("BRY_0").checked){
+	
+	 */
+	var q0 = document.getElementById("Q0")
+	var q1 = document.getElementById("Q1")
+	var q2 = document.getElementById("Q2")
+	var q3 = document.getElementById("Q3")
+	var q4 = document.getElementById("Q4")
+	var q5 = document.getElementById("Q5")
+	var q6 = document.getElementById("Q6")
+	var q7 = document.getElementById("Q7")
+	var q8 = document.getElementById("Q8")
+	var q9 = document.getElementById("Q9")
+	var q10 = document.getElementById("Q10")
+	
+	$('input[name="q0"]').on("click", function(e) {
+		console.log("Q0 option clicked");
+		if (document.getElementById("Q0_0").checked){
 			console.log("	Take the 0 value");
-			BRY.value = 0;
+			q0.value = 0;
 		}
-		if (document.getElementById("BRY_1").checked){
+		if (document.getElementById("Q0_1").checked){
 			console.log("	Take the 1 value");
-			BRY.value = 1;
+			q0.value = 1;
 
 		}
     
 	});
-	
-		$('input[name="ball_red_no"]').on("click", function(e) {
-		console.log("Red Ball 'NO' option clicked");
-		if (document.getElementById("BRN_0").checked){
+	$('input[name="q1"]').on("click", function(e) {
+		console.log("Q1 option clicked");
+		if (document.getElementById("Q1_0").checked){
 			console.log("	Take the 0 value");
-			BRN.value = 0;
+			q1.value = 0;
 		}
-		if (document.getElementById("BRN_1").checked){
+		if (document.getElementById("Q1_1").checked){
 			console.log("	Take the 1 value");
-			BRN.value = 1;
-		}
-    
-    
-	});
-	
-		$('input[name="ball_yellow_yes"]').on("click", function(e) {
-		console.log("Yellow Ball 'YES' option clicked");
-		if (document.getElementById("BYY_0").checked){
-			console.log("	Take the 0 value");
-			BYY.value = 0;
-		}
-		if (document.getElementById("BYY_1").checked){
-			console.log("	Take the 1 value");
-			BYY.value = 1;
+			q1.value = 1;
+
 		}
     
 	});
-	
-		$('input[name="ball_yellow_no"]').on("click", function(e) {
-		console.log("Yellow Ball 'NO' option clicked");
-		if (document.getElementById("BYN_0").checked){
+	$('input[name="q2"]').on("click", function(e) {
+		console.log("Q2 option clicked");
+		if (document.getElementById("Q2_0").checked){
 			console.log("	Take the 0 value");
-			BYN.value = 0;
+			q2.value = 0;
 		}
-		if (document.getElementById("BYN_1").checked){
+		if (document.getElementById("Q2_1").checked){
 			console.log("	Take the 1 value");
-			BYN.value = 1;
+			q2.value = 1;
+
 		}
     
 	});
-	
-		$('input[name="ball_green_yes"]').on("click", function(e) {
-		console.log("Green Ball 'YES' option clicked");
-		if (document.getElementById("BGY_0").checked){
+	$('input[name="q3"]').on("click", function(e) {
+		console.log("Q3 option clicked");
+		if (document.getElementById("Q3_0").checked){
 			console.log("	Take the 0 value");
-			BGY.value = 0;
+			q3.value = 0;
 		}
-		if (document.getElementById("BGY_1").checked){
+		if (document.getElementById("Q3_1").checked){
 			console.log("	Take the 1 value");
-			BGY.value = 1;
+			q3.value = 1;
+
 		}
     
 	});
-	
-		$('input[name="ball_green_no"]').on("click", function(e) {
-		console.log("Green Ball 'NO' option clicked");
-		if (document.getElementById("BGN_0").checked){
+	$('input[name="q4"]').on("click", function(e) {
+		console.log("Q4 option clicked");
+		if (document.getElementById("Q4_0").checked){
 			console.log("	Take the 0 value");
-			BGN.value = 0;
+			q4.value = 0;
 		}
-		if (document.getElementById("BGN_1").checked){
+		if (document.getElementById("Q4_1").checked){
 			console.log("	Take the 1 value");
-			BGN.value = 1;
+			q4.value = 1;
+
 		}
     
 	});
+	$('input[name="q5"]').on("click", function(e) {
+		console.log("Q5 option clicked");
+		if (document.getElementById("Q5_0").checked){
+			console.log("	Take the 0 value");
+			q5.value = 0;
+		}
+		if (document.getElementById("Q5_1").checked){
+			console.log("	Take the 1 value");
+			q5.value = 1;
+
+		}
+    
+	});
+	$('input[name="q6"]').on("click", function(e) {
+		console.log("Q6 option clicked");
+		if (document.getElementById("Q6_0").checked){
+			console.log("	Take the 0 value");
+			q6.value = 0;
+		}
+		if (document.getElementById("Q6_1").checked){
+			console.log("	Take the 1 value");
+			q6.value = 1;
+
+		}
+    
+	});
+	$('input[name="q7"]').on("click", function(e) {
+		console.log("Q7 option clicked");
+		if (document.getElementById("Q7_0").checked){
+			console.log("	Take the 0 value");
+			q7.value = 0;
+		}
+		if (document.getElementById("Q7_1").checked){
+			console.log("	Take the 1 value");
+			q7.value = 1;
+
+		}
+    
+	});
+	$('input[name="q8"]').on("click", function(e) {
+		console.log("Q8 option clicked");
+		if (document.getElementById("Q8_0").checked){
+			console.log("	Take the 0 value");
+			q8.value = 0;
+		}
+		if (document.getElementById("Q8_1").checked){
+			console.log("	Take the 1 value");
+			q8.value = 1;
+
+		}
+    
+	});
+	$('input[name="q9"]').on("click", function(e) {
+		console.log("Q9 option clicked");
+		if (document.getElementById("Q9_0").checked){
+			console.log("	Take the 0 value");
+			q9.value = 0;
+		}
+		if (document.getElementById("Q9_1").checked){
+			console.log("	Take the 1 value");
+			q9.value = 1;
+
+		}
+    
+	});
+	$('input[name="q10"]').on("click", function(e) {
+		console.log("Q10 option clicked");
+		if (document.getElementById("Q10_0").checked){
+			console.log("	Take the 0 value");
+			q10.value = 0;
+		}
+		if (document.getElementById("Q10_1").checked){
+			console.log("	Take the 1 value");
+			q10.value = 1;
+
+		}
+    
+	});	
+	
+	
 	
 	/* FOR UPDATING THE INFO IN THE POINTS BOX */
 	var RedDiv = document.getElementById("RedBallInfo");
