--- a/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_PageSELECTED.html
+++ b/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_PageSELECTED.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-	Task 2 - Advisor Picked Round {{player.round_number}} out of {{Constants.num_rounds}}
+	Task 2 - Advisor Picked Round {{player.round_number}} out of {{Constants.num_rounds}} - Choice
 {% endblock %}
 
 
