--- a/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_Page1.html
+++ b/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_Page1.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-	Part 1 - Round {{player.round_number}} out of {{Constants.num_rounds}}
+	Part 1 - Round {{player.round_number}} out of {{Constants.num_rounds}} - Choice
 {% endblock %}
 
 
