--- a/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_PageRED.html
+++ b/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_PageRED.html
@@ -11,6 +11,9 @@
 
 
 {% block content %}
+<font size="+2"> <!-- TO CHANGE FONT SIZE, CHANGE THIS NUMBER. DEFAULT IS +0 -->
+
+
 <!--
 Page attributes:
 - One container with the follow:
@@ -461,7 +464,7 @@ Page attributes:
 
 </br>
 
-
+</font>
 
 <!-- Variable storage here -->
 <input type="hidden" name="Red_Q0" id="Q0"/>
