--- a/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_Page1.html
+++ b/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_Page1.html
@@ -7,6 +7,8 @@
 
 
 {% block content %}
+<font size="+2"> <!-- TO CHANGE FONT SIZE, CHANGE THIS NUMBER. DEFAULT IS +0 -->
+
 <!--
 Page attributes:
 - One container with the follow:
@@ -220,7 +222,7 @@ Page attributes:
 </br>
 </br> 
 </br>
-
+</font>
 <!-- Hidden variable storage -->
 <!-- Note: name= is the python name, id is the html name-->
 <input type="hidden" name="Advisor_LorR" id="Advisor_Val"/>
