--- a/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_PageSELECTED.html
+++ b/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_PageSELECTED.html
@@ -13,6 +13,7 @@
 
 
 {% block content %}
+<font size="+2"> <!-- TO CHANGE FONT SIZE, CHANGE THIS NUMBER. DEFAULT IS +0 -->
 
 <!--
 Page attributes:
@@ -293,6 +294,8 @@ Page attributes:
 		White_Decision
 		Black_Decision
  -->
+ </font>
+ 
 <input type="hidden" name="Advisor_SaysWhite" id="Advisor_SW"/>
 <input type="hidden" name="Advisor_SaysBlack" id="Advisor_SB"/>
 
