--- a/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_Page1.html
+++ b/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_Page1.html
@@ -11,6 +11,9 @@
 
 
 {% block content %}
+<font size="+2"> <!-- TO CHANGE FONT SIZE, CHANGE THIS NUMBER. DEFAULT IS +0 -->
+
+
 <!--
 Page attributes:
 - One container with the follow:
@@ -287,7 +290,7 @@ Page attributes:
 </br>
 </br>
 </br>
-
+</font>
 
 <!-- Variable storage here -->
 <input type="hidden" name="Choice_NoQ" id="NoQuestionsChoice"/>
