--- a/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_PageRainbow.html
+++ b/otree SILVIO FINAL/StatePooling_TASK1/templates/StatePooling_TASK1/Task1_PageRainbow.html
@@ -11,6 +11,8 @@
 
 
 {% block content %}
+<font size="+2"> <!-- TO CHANGE FONT SIZE, CHANGE THIS NUMBER. DEFAULT IS +0 -->
+
 <!--
 Page attributes:
 - One container with the follow:
@@ -460,7 +462,7 @@ Page attributes:
 
 
 </br>
-
+</font>
 
 
 <!-- Variable storage here -->
